--- a/styles.css
+++ b/styles.css
@@ -504,9 +504,8 @@
   .movie-card:hover .favorite-btn {
     opacity: 1;
   }
-
-  .favorite-btn.active {
-    color: var(--primary-color);
+  .favorite-btn.active, body.light-mode .favorite-btn.active, body.sepia-mode .favorite-btn active {
+    color: var(--primary-color) !important;
     opacity: 1;
   }
 
