--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,12 @@
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.site-footer {
+    margin-top: auto;
+}
 .site-footer {
     background-color: var(--background-secondary);
     color: var(--text-primary);
