--- a/css/movies.css
+++ b/css/movies.css
@@ -70,7 +70,7 @@
   width: 80%;
 }
 .movies-row::-webkit-scrollbar-track {
-  background: rgba(0,0,0,0.0); /* transparent */
+  background: rgba(0,0,0,0.0); 
   border-radius: 10px;
 }
 
@@ -83,7 +83,7 @@ body.sepia-mode .movies-row::-webkit-scrollbar-track {
 }
 
 .movies-row::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.421); /* gris très léger et transparent */
+  background: rgba(255, 255, 255, 0.421); 
   border-radius: 10px;
 }
 
