--- a/css/loading.css
+++ b/css/loading.css
@@ -1,3 +1,4 @@
+/* chargement */
 .loading {
   display: flex;
   justify-content: center;
@@ -5,6 +6,7 @@
   padding: 40px;
 }
 
+/* spinner */
 .spinner {
   width: 40px;
   height: 40px;
@@ -14,10 +16,10 @@
   animation: spin 1s linear infinite;
 }
 
+/* spinner - modes */
 body.light-mode .spinner { 
   border: 4px solid rgba(0,0,0,0.3); 
 }
 body.sepia-mode .spinner { 
   border: 4px solid rgba(92,75,55,0.3); 
 }
-
